--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,3 +3,20 @@ width: 500px;
 border: 1px solid black;
 }
 p, li, hi {color: maroon;}
+
+html {background-color: #00539F;}
+
+body {
+	width: 600px;
+	margin: 0 auto;
+	background-color: #FF9500;
+	padding: 0 20px 20px 20px;
+	border: 5px solid black;
+}
+
+h1 {
+	margin: 0;
+	padding: 20px 0;
+	color: #00539F;
+	text-shadow: 2px 2px 1px black;
+}
